2004-12-05  Choe Hwanjin <krisna@kldp.org>
	* release 0.15

2004-12-04  Choe Hwanjin <krisna@kldp.org>
	* About 창 업데이트

2004-12-03  Choe Hwanjin <krisna@kldp.org>
	* 나비 아이콘 새로 올림 (bluetux님의 작품)

2004-12-02  Choe Hwanjin <krisna@kldp.org>
	* 자판에서 자모 빈도를 $HOME/.nabi/nabi.log에 기록함

2004-11-26  Choe Hwanjin <krisna@kldp.org>
	* 설정창에서 한글/한자로 메뉴를 나눔

2004-11-21  Choe Hwanjin <krisna@kldp.org>
	* 한영 전환키와 한자 키 설정을 보강
	* 옛글 compose table 추가
	* 순아래 자판 추가

2004-11-09  Choe Hwanjin <krisna@kldp.org>
	* tray의 크기에 맞춰 size-allocate 시그널에서 자동으로 크기를 수정함
	* 아이콘 크기 설정 옵션을 없앰

2004-11-03  Choe Hwanjin <krisna@kldp.org>
	* 키 입력 통계를 다른 창으로 띄움
	* 하드코딩된 locale 스트링을 제거
	* Qt immodule의 XIM에서 preedit window 위치를 잘못 찾던 버그 수정

2004-10-05  Choe Hwanjin <krisna@kldp.org>
	* full compose map 추가(엣글 입력에 필요함)
	* 세벌식 옛글 자판 추가

2004-10-04  Choe Hwanjin <krisna@kldp.org>
	* compose table을 제대로 로딩하지 못하던 버그 수정

2004-08-30  Choe Hwanjin <krisna@kldp.org>
	* Tux 테마 추가 (박준철님에게 감사드립니다)

2004-08-28  Choe Hwanjin <krisna@kldp.org>
	* release 0.14

2004-08-28  Choe Hwanjin <krisna@kldp.org>
	* ko이외에 ja_JP.UTF-8, zh_CN.UTF-8, zh_HK.UTF-8, zh_TW.UTF-8,
	en_US.UTF-8을 지원하도록 함
	* candidate list의 글꼴 설정 옵션도 설정창에 추가
	* candidate list의 갯수를 9개로 변경

2004-08-01  Choe Hwanjin <krisna@kldp.org>
	* XIMPreeditArea 지원

2004-07-31  Choe Hwanjin <krisna@kldp.org>
	* XIMPreeditNothing을 지원하기 위해 ic.c에서 gdk 함수를 직접 부르는
	  방식으로 변경함

2004-07-25  Choe Hwanjin <krisna@kldp.org>
	* 설정창 구현

2004-06-23  Choe Hwanjin <krisna@kldp.org>
	* src/ic.c: nabi_ic_commit_keyval() 함수에서 더이상 XIM_COMMIT을 사용
	하지 않고, 바로 key event를 forwarding하도록 수정함. 일부 프로그램에서
	하나의 이벤트에서 두번 commit하는 것을 받아들이지 못하는 듯함.
	ex) wine

2004-06-05  Choe Hwanjin <krisna@kldp.org>
	* src/server.h src/server/c src/ui.c src/nabi.h src/automata.h
	src/keyboard tables/compose/default configure.in: 키보드 테이블과
	컴포우즈 테이블을 위한 함수 nabi_server_load_keyboard_table(),
	nabi_server_load_compose_table()을 구현함. 더이상 ui.c에서 키보드와
	컴포우즈 테이블을 관리하지 않음. keyboard_map, compose_map에서